--- a/package.json
+++ b/package.json
@@ -6,12 +6,39 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "body-parse": "^0.1.0",
+    "connect-busboy": "^0.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "eslint-loader": "^4.0.2",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.9",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "immutable": "^4.0.0-rc.12",
+    "nodemon": "^2.0.4",
+    "path": "^0.12.7",
+    "pg": "^8.3.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-player": "^2.6.0",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
+    "react-toastify": "^6.0.8",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "cd server && nodemon index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
